--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ Django = "*"
 django-distill = "*"
 
 [tool.poetry.dev-dependencies]
+django-debug-toolbar = "*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
