add psycopg2-binary as dependency so we can start working with a real database

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.9"
 Django = "*"
 django-distill = "*"
 gunicorn = "*"
+psycopg2-binary = "*"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "*"
