--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ Django = "*"
 django-distill = "*"
 gunicorn = "*"
 psycopg2-binary = "*"
+django-environ = "*"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "*"
