--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,5 +9,8 @@ jobs:
         with:
           python-version: 3.9
       - uses: abatilo/actions-poetry@v2.0.0
+        with:
+          poetry-version: 1.1.12
+      - run: poetry install
       - run: poetry run isort --check-only .
       - run: poetry run flake8
